Added Folders and nav

--- a/index.html
+++ b/index.html
@@ -2,10 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cayleigh's Project</title>
+    <meta name="viewport"    content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="WDD 230 - Web Frontend Development - Cayleigh Leishman - Course assingment portal">
+    <meta name="author"      content="Cayleigh Leishman">
+
+
+    <title>Cayleigh - WDD 230 - Web Frontend Development</title>
 </head>
 <body>
+    <header>
+        <img src= "#"  alt="Cayleigh's headshot">
+        <h1>Cayleigh Leisman</h1>
+
+    </header>
+
+    <nav> 
+        <ul>
+            <li><a href="#">Home</a> </li>
+            <li><a href="#">Site-Plan </a> </li>
+            <li><a href="#">Chamber</a> </li>
+            <li><a href="#">BYU-Idaho</a> </li>
+            <li><a href="#">Scripture </a> </li>   
+        </ul>
     
+    </nav>
+
+
+    <main>
+        <h2>WDD 230: Web Frontend Development I</h2>
+        <hr>
+
+        <section class="card" >
+            <h3> learning activities</h3>
+        </section>
+
+        <section class="card">
+            <h3>Main</h3>
+        </section>
+    </main>
+
+    <footer></footer>
 </body>
 </html>
