--- a/index.html
+++ b/index.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"    content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="WDD 230 - Web Frontend Development - Cayleigh Leishman - Course assingment portal">
-    <meta name="author"      content="Cayleigh Leishman">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="WDD 230 - Web Frontend Development - Cayleigh Leishman - Course assingment portal">
+    <meta name="author" content="Cayleigh Leishman">
 
 
     <title>Cayleigh - WDD 230 - Web Frontend Development</title>
 </head>
+
 <body>
     <header>
-        <img src= "#"  alt="Cayleigh's headshot">
+        <img src="#" alt="Cayleigh's headshot">
         <h1>Cayleigh Leisman</h1>
 
     </header>
 
-    <nav> 
+    <nav>
         <ul>
             <li><a href="#">Home</a> </li>
             <li><a href="#">Site-Plan </a> </li>
             <li><a href="#">Chamber</a> </li>
             <li><a href="#">BYU-Idaho</a> </li>
-            <li><a href="#">Scripture </a> </li>   
+            <li><a href='https://www.churchofjesuschrist.org/study/scriptures/nt/john/8?lang=eng&id=p12#p12'>John
+                    18:12</a></li> <!--put in your favourite scripture-->
+
         </ul>
-    
+
     </nav>
 
 
@@ -32,15 +37,22 @@
         <h2>WDD 230: Web Frontend Development I</h2>
         <hr>
 
-        <section class="card" >
-            <h3> learning activities</h3>
+        <section class="card">
+            <h3> Learning Activities</h3>
+            <a href="lesson01/holygrail.html">Lesson 01</a>
+
         </section>
 
         <section class="card">
-            <h3>Main</h3>
+            <h3>Information</h3>
         </section>
     </main>
 
-    <footer></footer>
+    <footer>
+        <p>©-Cayleigh Leishman -Idaho, USA; Alberta, Canada</p>
+        <p>lastModified</p>
+
+    </footer>
 </body>
+
 </html>
