--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
         content="WDD 230 - Web Frontend Development - Cayleigh Leishman - Course assingment portal">
     <meta name="author" content="Cayleigh Leishman">
 
-
     <title>Cayleigh - WDD 230 - Web Frontend Development</title>
+
+    <link rel="stylesheet" href="style/base.css">
+
 </head>
 
 <body>
     <header>
-        <img src="#" alt="Cayleigh's headshot">
-        <h1>Cayleigh Leisman</h1>
-
+        <div class="cayleigh">
+            <img src="image/cayleigh-small.png" alt="Cayleigh's headshot">
+            <h1>Cayleigh Leishman</h1>
+        </div>
     </header>
 
     <nav>
@@ -39,8 +42,18 @@
 
         <section class="card">
             <h3> Learning Activities</h3>
-            <a href="lesson01/holygrail.html">Lesson 01</a>
-
+            <ul>
+                <li>Lesson 01 <a href="lesson01/holygrail.html">Holy Grail</a></li>
+                <li>Lesson 02 <a href="#"></a></li>
+                <li>Lesson 03 <a href="#"></a></li>
+                <li>Lesson 04 <a href="#"></a></li>
+                <li>Lesson 05 <a href="#"></a></li>
+                <li>Lesson 06 <a href="#"></a></li>
+                <li>Lesson 07 <a href="#"></a></li>
+                <li>Lesson 08 <a href="#"></a></li>
+                <li>Lesson 09 <a href="#"></a></li>
+                <li>Lesson 10 <a href="#"></a></li>
+            </ul>
         </section>
 
         <section class="card">
