--- a/lesson01/holygrail.html
+++ b/lesson01/holygrail.html
@@ -9,12 +9,23 @@
     <link rel="stylesheet" href="styles/holygrail.css">
 </head>
 
-<header></header>
-
-<nav></nav>
+<!-- this content was forked from Google Web Developers 10 Modern Layouts https://youtu.be/qm0IfG1GyZU?t=465-->
 
 
-<body> </body>
+<body>
+    <header>
+        <h1 contenteditable>Header</h1>
+    </header>
+
+    <main>
+        <div class="main" contenteditable> Main Content Area </div>
+    </main>
+
+    <div class="right-sidebar" contenteditable>Right Sidebar</div>
+
+    <footer contenteditable>Footer Content</footer>
+
+</body>
 
 
 
