--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
     <title>Cayleigh - WDD 230 - Web Frontend Development</title>
 
-    <link rel="stylesheet" href="style/base.css">
-
+    <link rel="stylesheet" href="styles/base.css">
 </head>
 
 <body>
@@ -43,16 +42,16 @@
         <section class="card">
             <h3> Learning Activities</h3>
             <ul>
-                <li>Lesson 01 <a href="lesson01/holygrail.html">Holy Grail</a></li>
-                <li>Lesson 02 <a href="#"></a></li>
-                <li>Lesson 03 <a href="#"></a></li>
-                <li>Lesson 04 <a href="#"></a></li>
-                <li>Lesson 05 <a href="#"></a></li>
-                <li>Lesson 06 <a href="#"></a></li>
-                <li>Lesson 07 <a href="#"></a></li>
-                <li>Lesson 08 <a href="#"></a></li>
-                <li>Lesson 09 <a href="#"></a></li>
-                <li>Lesson 10 <a href="#"></a></li>
+                <li>Lesson 01 - <a href="lesson01/holygrail.html">-Holy Grail</a></li>
+                <li>Lesson 02 - <a href="#"></a></li>
+                <li>Lesson 03 - <a href="#"></a></li>
+                <li>Lesson 04 - <a href="#"></a></li>
+                <li>Lesson 05 - <a href="#"></a></li>
+                <li>Lesson 06 - <a href="#"></a></li>
+                <li>Lesson 07 - <a href="#"></a></li>
+                <li>Lesson 08 - <a href="#"></a></li>
+                <li>Lesson 09 - <a href="#"></a></li>
+                <li>Lesson 10 - <a href="#"></a></li>
             </ul>
         </section>
 
