--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="cayleigh">
-            <img src="image/cayleigh-small.png" alt="Cayleigh's headshot">
+            <img src="images/cayleigh.png" alt="Cayleigh's headshot">
             <h1>Cayleigh Leishman</h1>
         </div>
     </header>
@@ -36,22 +36,22 @@
 
 
     <main>
-        <h2>WDD 230: Web Frontend Development I</h2>
+        <h2>WDD 230: Web Frontend Development</h2>
         <hr>
 
         <section class="card">
             <h3> Learning Activities</h3>
             <ul>
-                <li>Lesson 01 - <a href="lesson01/holygrail.html">-Holy Grail</a></li>
-                <li>Lesson 02 - <a href="#"></a></li>
-                <li>Lesson 03 - <a href="#"></a></li>
-                <li>Lesson 04 - <a href="#"></a></li>
-                <li>Lesson 05 - <a href="#"></a></li>
-                <li>Lesson 06 - <a href="#"></a></li>
-                <li>Lesson 07 - <a href="#"></a></li>
-                <li>Lesson 08 - <a href="#"></a></li>
-                <li>Lesson 09 - <a href="#"></a></li>
-                <li>Lesson 10 - <a href="#"></a></li>
+                <li>Lesson 01 - <a href="lesson01/holygrail.html">Holy Grail</a></li>
+                <li>Lesson 02 - <a href="#"></a> </li>
+                <li>Lesson 03 - <a href="#"></a> </li>
+                <li>Lesson 04 - <a href="#"></a> </li>
+                <li>Lesson 05 - <a href="#"></a> </li>
+                <li>Lesson 06 - <a href="#"></a> </li>
+                <li>Lesson 07 - <a href="#"></a> </li>
+                <li>Lesson 08 - <a href="#"></a> </li>
+                <li>Lesson 09 - <a href="#"></a> </li>
+                <li>Lesson 10 - <a href="#"></a> </li>
             </ul>
         </section>
 
@@ -61,9 +61,11 @@
     </main>
 
     <footer>
-        <p>©-Cayleigh Leishman -Idaho, USA; Alberta, Canada</p>
-        <p>lastModified</p>
+        <p> © <span id="copyrightYear"></span>
+            "Cayleigh Leishman │ Software Enginnering │ Idaho" </p>
 
+        <p id="lastModified"></p>
+        <script src="scripts/getDates.js"></script>
     </footer>
 </body>
 
