added meta property tags

--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="WDD 230 - Web Frontend Development - Cayleigh Leishman - Course assingment portal">
-    <meta name="author" content="Cayleigh Leishman">
+    <meta name="viewport"        content = "width=device-width, initial-scale=1.0">
+    <meta name="description"     content = "WDD 230 - Web Frontend Development - Cayleigh Leishman - Course assingment portal">
+    <meta name="author"          content = "Cayleigh Leishman">
+
+    <meta propterty = "og:title" content = "Aberdeen, Idaho, USA" />
+    <meta propterty = "og:tytpe" content = "Website" />
+    <meta propterty = "og:url"   content = "http://www.aberdeenidaho.us/"/>
+    <meta propterty = "og:image" content = "http://www.aberdeenidaho.us/assets/wel.jpg" />
 
     <title>Cayleigh - WDD 230 - Web Frontend Development</title>
-   <!-- used for practice-base.css
+   
+    <!-- used for practice-base.css
    <style>
         @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
         </style>
