fixed which css html was linked to

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <!--Lesson 2 Activity *mostly done in CSS* -->
     <!-- connects to .css files in Styles folder -->  
     <link rel="stylesheet" href="styles/normalize.css" >  <!-- Runs first -->
-    <link rel="stylesheet" href="styles/reset.css">
-    <!-- <link rel="stylesheet" href="styles/base.css"> -->  <!--I also added a reset.css for lesson 2. See reset.css for more info -->
+    <link rel="stylesheet" href="styles/base.css">  <!--I also added a reset.css for lesson 2. See reset.css for more info -->
 
     <!-- connects to.js files in Scripts folder. 'defer' tells html do this last -->
     <script src="scripts/getdates.js" defer> </script>
