--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+
+
     <meta charset="UTF-8">
     <meta name="viewport"        content = "width=device-width, initial-scale=1.0">
     <meta name="description"     content = "WDD 230 - Web Frontend Development - Cayleigh Leishman - Course assingment portal">
@@ -19,10 +21,14 @@
     <!-- connects to .css files in Styles folder -->  
     <link rel="stylesheet" href="styles/normalize.css" >  <!-- Runs first -->
     <link rel="stylesheet" href="styles/base.css">  <!--I also added a reset.css for lesson 2. See reset.css for more info -->
+    <link rel="stylesheet" href="styles/larger.css">
+
 
     <!-- connects to.js files in Scripts folder. 'defer' tells html do this last -->
     <script src="scripts/getdates.js" defer> </script>
 
+    <!-- use this for yor favicon -->
+    <link rel="icon" href="favicon.ico" >
 </head>
 
 <body>
@@ -50,6 +56,7 @@
         <h2>WDD 230: Web Frontend Development</h2>
         <hr>
 
+        <div id="cards">
         <section class="card">
             <h3> Learning Activities</h3>
 
@@ -73,6 +80,7 @@
             <p> </p>
 
         </section>
+        </div>
     </main>
 
     <footer>
