--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -26,7 +26,7 @@
         </ul>
 
     </nav>
-
+    <!-- Check the template on Professors assingment under "learning assngments-> week02 -> design principles" -->
     <main>
 
         <!-- in Each section have these things:
@@ -38,6 +38,7 @@
         -- a brief description on how the design principle is exemplified on that page. -->
 
         <section class="card">
+            <!-- pic something you can easily find website examples for -->
             <h1>Rule Of Thirds</h1>
            
             
