updated validator and course home page

--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
 
 <head>
 
-
     <meta charset="UTF-8">
     <meta name="viewport"        content = "width=device-width, initial-scale=1.0">
     <meta name="description"     content = "WDD 230 - Web Frontend Development - Cayleigh Leishman - Course assingment portal">
     <meta name="author"          content = "Cayleigh Leishman">
 
     <!-- Lesson 2 Activity- Social Media Meta Tags -->
-    <meta propterty = "og:title" content = "Aberdeen, Idaho, USA" />
-    <meta propterty = "og:tytpe" content = "Website" />
-    <meta propterty = "og:url"   content = "http://www.aberdeenidaho.us/"/>
-    <meta propterty = "og:image" content = "http://www.aberdeenidaho.us/assets/wel.jpg" />
+    <meta property = "og:title" content = "Aberdeen, Idaho, USA" >
+    <meta property = "og:tytpe" content = "Website" >
+    <meta property = "og:url"   content = "http://www.aberdeenidaho.us/">
+    <meta property = "og:image" content = "http://www.aberdeenidaho.us/assets/wel.jpg" >
 
     <title>Cayleigh - WDD 230 - Web Frontend Development</title>
    
@@ -57,35 +56,34 @@
         <hr>
 
         <div id="cards">
-        <section class="card">
-            <h3> Learning Activities</h3>
+            <section class="card">
+                <h3> Learning Activities</h3>
 
-            <ul>
-                <li>Lesson 01 - <a href="lesson01/holygrail.html">Holy Grail</a></li>
-                <li>Lesson 02 - <a href="lesson02/design-principles.html"></a>Design Principles</li>
-                <li>Lesson 03 - <a href="#"></a> </li>
-                <li>Lesson 04 - <a href="#"></a> </li>
-                <li>Lesson 05 - <a href="#"></a> </li>
-                <li>Lesson 06 - <a href="#"></a> </li>
-                <li>Lesson 07 - <a href="#"></a> </li>
-                <li>Lesson 08 - <a href="#"></a> </li>
-                <li>Lesson 09 - <a href="#"></a> </li>
-                <li>Lesson 10 - <a href="#"></a> </li>
-            </ul>
-        </section>
+                <ul>
+                    <li>Lesson 01 - <a href="lesson01/holygrail.html">Holy Grail</a></li>
+                    <li>Lesson 02 - <a href="lesson02/design-principles.html">Design Principles</a></li>
+                    <!-- <li>Lesson 03 - <a href="#"></a> </li>
+                    <li>Lesson 04 - <a href="#"></a> </li>
+                    <li>Lesson 05 - <a href="#"></a> </li>
+                    <li>Lesson 06 - <a href="#"></a> </li>
+                    <li>Lesson 07 - <a href="#"></a> </li>
+                    <li>Lesson 08 - <a href="#"></a> </li>
+                    <li>Lesson 09 - <a href="#"></a> </li>
+                    <li>Lesson 10 - <a href="#"></a> </li> -->
+                </ul>
+            </section>
 
-        <section class="card">
-            <h3>Information</h3>
-            <p>Weather Information: Placeholder</p>
-            <p> </p>
+            <section class="card">
+                <h3>Information</h3>
+                <p>Weather Information: Placeholder</p>
+                <p> </p>
 
-        </section>
+            </section>
         </div>
     </main>
 
     <footer>
-        <p>&copy; <span id='currentYear'></span>│Cayleigh Leishman │ Idaho, USA" </p> <!-- &copy is suposed to be the code that will give you the ©  symbol -->
-         
+        <p>&copy; <span id='currentYear'></span>│Cayleigh Leishman │ Idaho, USA" │  </p> <!-- &copy is suposed to be the code that will give you the ©  symbol -->    
         <p id='lastModified'></p>
         
     </footer>
