Finally figured out some of the problems

--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
 
                 <ul>
                     <li>Lesson 01 - <a href="lesson01/holygrail.html">Holy Grail</a></li>
-                    <li>Lesson 02 - <a href="lesson02/design-principles.html">Design Principles</a></li>
+                    <li>Lesson 02 - <a href="lesson02/design-principles.html">Design Principles, </a> 
+                        <a href="lesson02/design.html"> lesson 2.4: Web Design Principles, </a>
+                        <a href="lesson02/media-query.html"> lesson 2.5: CSS Media Queries</a>
+                    </li>
                     <!-- <li>Lesson 03 - <a href="#"></a> </li>
                     <li>Lesson 04 - <a href="#"></a> </li>
                     <li>Lesson 05 - <a href="#"></a> </li>
