--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="'stylesheet" href="/styles/larger.css">
+    
 </head>
 <body> 
     <header>
