--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script src="scripts/getdates.js" defer> </script>
 
     <!-- use this for yor favicon -->
-    <link rel="icon" href="favicon.ico" >
+    <link rel="icon" href="images/favicon.ico" >
 </head>
 
 <body>
@@ -43,7 +43,7 @@
             <li><a href="#">Home</a> </li>
             <li><a href="#">Site-Plan </a> </li>
             <li><a href="#">Chamber</a> </li>
-            <li><a href="#">BYU-Idaho</a> </li>
+            <li><a href="https://www.byui.edu/">BYU-Idaho</a></li>
             <li><a href='https://www.churchofjesuschrist.org/study/scriptures/nt/john/8?lang=eng&id=p12#p12'>John18:12</a></li> <!--put in your favourite scripture-->
 
         </ul>
