Updated Meta Tags from location to my website and added a favicon

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta name="author"  content = "Cayleigh Leishman">
 
     <!-- Lesson 2 Activity- Social Media Meta Tags -->
-    <meta property = "og:title" content = "Aberdeen, Idaho, USA" >
+    <meta property = "og:title" content = "Cayleigh Leishman" >
     <meta property = "og:tytpe" content = "Website" >
-    <meta property = "og:url"   content = "http://www.aberdeenidaho.us/">
-    <meta property = "og:image" content = "http://www.aberdeenidaho.us/assets/wel.jpg" >
+    <meta property = "og:url"   content = "https://cayleighleishman.github.io/wdd230/">
+    <meta property = "og:image" content = "https://cayleighleishman.github.io/wdd230/images/cayleigh.png" >
 
     <title>Cayleigh - WDD 230 - Web Frontend Development</title>
    
