--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -55,7 +55,7 @@
         <section class="card">
             <h1>Alignment </h1>
           
-           <img src="images/alingment.png" alt="Screenshot of The Childrens Center of Austin's Website. Portraying three pictures horizontally alinged.">
+            <img src="images/alingment.PNG" alt="Screenshot of The Childrens Center of Austin's Website. Portraying three pictures horizontally alinged.">
             <a href="https://www.childrenscenterofaustin.com/"> The Childrens Center of Austin</a>
             
         </section>
