removed question from page

--- a/lesson02/design.html
+++ b/lesson02/design.html
@@ -9,8 +9,8 @@
 
 </head>
 <body>
-    <h4>Question: how to test div.callout for AA level and AAA level.</h4> 
-    <h4> Question: How do I get the information in section to be side by side in css only?</h4>
+    <!-- <h4>Question: how to test div.callout for AA level and AAA level.</h4> 
+    <h4> Question: How do I get the information in section to be side by side in css only?</h4> -->
     <header>
         <div class="banner">🪲 The Lazy Bug<br>Join us for the ribbon cutting cermony!<br>Friday at 11:00 AM!</div>
         <h1>Design Principles</h1>
