updated assingment links

--- a/index.html
+++ b/index.html
@@ -68,19 +68,26 @@
                 <h3> Learning Activities</h3>
 
                 <ul>
-                    <li>Lesson 01 - <a href="lesson01/holygrail.html">Holy Grail</a></li>
-                    <li>Lesson 02 - <a href="lesson02/design-principles.html">Design Principles, </a> 
-                        <a href="lesson02/design.html"> lesson 2.4: Web Design Principles, </a>
-                        <a href="lesson02/media-query.html"> lesson 2.5: CSS Media Queries</a>
-                    </li>
-                    <li>Lesson 03 - <a href="lesson03/images/combinator.png" alt="image of combinator project"></a>Combinator </li>
-                    <!-- <li>Lesson 04 - <a href="#"></a> </li>
-                    <li>Lesson 05 - <a href="#"></a> </li>
-                    <li>Lesson 06 - <a href="#"></a> </li>
-                    <li>Lesson 07 - <a href="#"></a> </li>
-                    <li>Lesson 08 - <a href="#"></a> </li>
-                    <li>Lesson 09 - <a href="#"></a> </li>
-                    <li>Lesson 10 - <a href="#"></a> </li> -->
+                    
+                    <li><b>Lesson 01: </b> </li>
+                    <li><a href="lesson01/holygrail.html">Holy Grail</a></li>
+
+                    <li><b>Lesson 02:</b>  </li>
+                    <li> <a href="lesson02/design-principles.html">Design Principles, </a> </li>
+                    <li><a href="lesson02/design.html"> lesson 2.4: Web Design Principles, </a> </li>
+                    <li><a href="lesson02/media-query.html"> lesson 2.5: CSS Media Queries</a></li>
+                   
+                    <li><b>Lesson 03 - </b></li>
+                    <li><a href="lesson03/images/combinators.JPG" alt="image of combinator project"> lesson 3.1 Combinator</a></li>
+                    <li><a href="https://codepen.io/Cayleigh-Secret/pen/oNRNWRm"> lesson 3.3 CSS Pseudo-elements</a></li>
+
+                    <!-- <li> <b>Lesson 04:</b> <a href="#"></a> </li>
+                    <li><b>Lesson 05 - </b><a href="#"></a> </li>
+                    <li><b>Lesson 06 - </b><a href="#"></a> </li>
+                    <li><b>Lesson 07 - </b><a href="#"></a> </li>
+                    <li><b>Lesson 08 - </b><a href="#"></a> </li>
+                    <li><b>Lesson 09 - </b><a href="#"></a> </li>
+                    <li><b>Lesson 10 - </b><a href="#"></a> </li> -->
                 </ul>
             </section>
 
