added new link to lesson card

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                     <li><b>Lesson 03 - </b></li>
                     <li><a href="lesson03/images/combinators.JPG" alt="image of combinator project"> lesson 3.1 Combinator</a></li>
                     <li><a href="https://codepen.io/Cayleigh-Secret/pen/oNRNWRm"> lesson 3.3 CSS Pseudo-elements</a></li>
+                    <li><a href="https://codepen.io/Cayleigh-Secret/pen/jOoOwma">lesson 3.4 Responsive Hamburger Menu</a></li>
 
                     <!-- <li> <b>Lesson 04:</b> <a href="#"></a> </li>
                     <li><b>Lesson 05 - </b><a href="#"></a> </li>
