--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
 1)how many things need to be affected by this rule?
 2) is Javascript going to be used for this? 
-  -->
+
+for hamburger menu use " ☰ "  -->
 <head>
 
     <meta charset="UTF-8">
@@ -30,7 +31,7 @@
 
     <!-- connects to.js files in Scripts folder. 'defer' tells html do this last -->
     <script src="scripts/getdates.js" defer> </script>
-    <script src="scripts/hamburger.js"defer> </script>
+    <script src="scripts/hamburger.js" defer> </script>
 
     <!-- use this for your favicon -->
     <link rel="icon" href="images/favicon.ico">
@@ -52,7 +53,7 @@
             <li><a href="#">Site-Plan </a> </li>
             <li><a href="#">Chamber</a> </li>
             <li><a href="https://www.byui.edu/">BYU-Idaho</a></li>
-            <li><a href='https://www.churchofjesuschrist.org/study/scriptures/nt/john/8?lang=eng&id=p12#p12'>John18:12</a></li> <!--put in your favourite scripture-->
+            <li><a href='https://www.churchofjesuschrist.org/study/scriptures/nt/john/8?lang=eng&id=p12#p12'>John 18:12</a></li> <!--put in your favourite scripture-->
 
         </ul>
 
@@ -78,7 +79,7 @@
                     <li><a href="lesson02/media-query.html"> lesson 2.5: CSS Media Queries</a></li>
                    
                     <li><b>Lesson 03 - </b></li>
-                    <li><a href="lesson03/images/combinators.JPG" alt="image of combinator project"> lesson 3.1 Combinator</a></li>
+                    <li><a href="images/combinators.JPG"> lesson 3.1 Combinator</a></li>
                     <li><a href="https://codepen.io/Cayleigh-Secret/pen/oNRNWRm"> lesson 3.3 CSS Pseudo-elements</a></li>
                     <li><a href="https://codepen.io/Cayleigh-Secret/pen/jOoOwma">lesson 3.4 Responsive Hamburger Menu</a></li>
 
@@ -101,6 +102,13 @@
         </div>
     </main>
 
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d187148.47001161976!2d-112.66082094260919!3d42.868731459204504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53554f20d5d09b0d%3A0x70c6a2484ce39b0!2sPocatello%2C%20ID!5e0!3m2!1sen!2sus!4v1715315861795!5m2!1sen!2sus"
+    width="600"
+    height="500" 
+    style="border:0;" allowfullscreen="" loading="lazy"
+    referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+    
     <footer>
         <p>&copy; <span id='currentYear'></span>│Cayleigh Leishman │ Idaho, USA" │  </p> <!-- &copy is suposed to be the code that will give you the ©  symbol -->    
         <p id='lastModified'></p>
