--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ for hamburger menu use " ☰ "  -->
 <head>
 
     <meta charset="UTF-8">
-    <meta name="viewport"  content = "width=device-width, initial-scale=1.0">
-    <meta name="description"  content = "WDD 230 - Web Frontend Development - Cayleigh Leishman - Course assingment portal">
-    <meta name="author"  content = "Cayleigh Leishman">
+    <meta name="viewport"    content = "width=device-width, initial-scale=1.0">
+    <meta name="description" content = "WDD 230 - Web Frontend Development - Cayleigh Leishman - Course Assingment Portal">
+    <meta name="author"      content = "Cayleigh Leishman">
 
     <!-- Lesson 2 Activity- Social Media Meta Tags -->
     <meta property = "og:title" content = "Cayleigh Leishman" >
