added chamber of commerce site and chambers Site-plan

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ for hamburger menu use " ☰ "  -->
     <nav>
         <ul>
             <li><a href="#">Home</a> </li>
-            <li><a href="#">Site-Plan </a> </li>
+            <li><a href="lesson03/chamber-site-plan.html">Site-Plan </a> </li>
             <li><a href="#">Chamber</a> </li>
             <li><a href="https://www.byui.edu/">BYU-Idaho</a></li>
             <li><a href='https://www.churchofjesuschrist.org/study/scriptures/nt/john/8?lang=eng&id=p12#p12'>John 18:12</a></li> <!--put in your favourite scripture-->
