updated meta tags

--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-
-    <meta charset="UTF-8">
+     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The chamber of commerce project</title>
+    <title>Chamber Site Plan</title>
+    <meta name="description" content = "Chamber of Comerce Site Plan.  This name represents the purpose of this website.">
+    <meta name="author" content="Cayleigh Leishman">
+
+    <meta property = "og:title" content = "Pocatello, Idaho, USA" >
+    <meta property = "og:tytpe" content = "Website" >
+    <meta property = "og:url"   content = "#">  <!-- insert link to pocatello website -->
+    <meta property = "og:image" content = "#" >
 
     <link rel="stylesheet" href="/chamber/styles/chamber-base.css">
     <link rel="stylesheet" href="/chamber/styles/larger.css">
