--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -32,7 +32,7 @@
     </nav>
 
     <section class="card">
-        <h2>Color Scheme</h2>
+        <h2>Color Schema:</h2>
         <p> At this time I have the colors set to blue, white and green. I plan to implement what I call:</p>
         <ul>
             <li style="color:navy;">Navy</li>
@@ -46,21 +46,13 @@
     </section>
 
     <section class="card">
-        <h2>Site Purpose</h2>
+        <h2>Site Purpose: </h2>
         <p>
             The Pocatello, Idaho chamber of Commerce is meant to give the people a tase of What Pocatello, Idaho is really like! It's time to introduce poeple to one of the most hospitable places they'd ever be to in Idaho! A place of warm welcoming fun with views to see and people to vist!
         </p>
 
     </section>
 
-    <section class="card">
-        <h2>Senario -Questions this website will answer</h2>
-        <ul>
-            <li>What do I need to know about Pocatello before I visit/Move? </li>
-            <li>What kind of Ameneties does Pocatello Provide? </li>
-            <li>What kind of  activities can be done in Pocatello? </li>
-        </ul>
-    </section>
 
     <section class="card"> 
         <h2>Typography</h2>
@@ -93,6 +85,15 @@
         <p>Bill is thinking of moving his business to Pocatello. But he needs to know if the consumer base is right for his business.</p>
    </section>
 
+   
+   <section class="card">
+    <h2>Questions this website will answer</h2>
+    <ul>
+        <li>What do I need to know about Pocatello before I visit/Move? </li>
+        <li>What kind of Ameneties does Pocatello Provide? </li>
+        <li>What kind of  activities can be done in Pocatello? </li>
+    </ul>
+</section>
         
    <footer>
     <p>&copy; <span id='currentYear'></span>│Cayleigh Leishman │ Idaho, USA" │  </p> <!-- &copy is suposed to be the code that will give you the ©  symbol -->    
