--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -35,13 +35,13 @@
         <h2>Color Schema:</h2>
         <p> At this time I have the colors set to blue, white and green. I plan to implement what I call:</p>
         <ul>
-            <li style="color:navy;">Navy</li>
-            <li style="color:white; text-shadow: 2px 2px black;">White</li>
-            <li style="color:#32343e;">dark blue </li>
-            <li style="color:#404c54;">grey blue </li>
-            <li style="color:#446b6a;">blue enough </li>
-            <li style="color:#478d73;">almost teal </li>
-            <li style="color:#5ba95d;">sea green </li>
+            <li style="color:navy;">Navy- used as background</li>
+            <li style="color:white; text-shadow: 2px 2px black;"> White used for text on darker background</li>
+            <li style="color:#32343e;">dark blue -- May use this instead of Navy blue</li>
+            <li style="color:#404c54;">grey blue -- I plan to use if color is seemingly too off for dark blue</li>
+            <li style="color:#446b6a;">blue enough -- I plan to use this as accent color to section tags  </li>
+            <li style="color:#478d73;">almost teal - accent color, will be used to add variety, may use in certain text like heading  </li>
+            <li style="color:#5ba95d;">sea green -accent color, used in smaller amounts to add variety.</li>
         </ul> 
     </section>
 
