updated site plan

--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -12,8 +12,8 @@
     <meta property = "og:url"   content = "#">  <!-- insert link to pocatello website -->
     <meta property = "og:image" content = "#" >
 
-    <link rel="stylesheet" href="/chamber/styles/chamber-base.css">
-    <link rel="stylesheet" href="/chamber/styles/larger.css">
+    <link rel="stylesheet" href="styles/chamber-base.css">
+    <link rel="stylesheet" href="styles/larger.css">
 
     <script src="/scripts/getdates.js" defer> </script>
     <script src="/scripts/hamburger.js" defer> </script>
