Chamber of Commerce Site plan Updated

--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -22,7 +22,7 @@
 <body>
     <header> 
         <img src="images/Pocatello" alt="Pocatello">
-        <h1>Cayleigh Leishman Site Plan!</h1>
+        <h1>Chamber of Commerce Site Plan</h1>
     </header>
     
     <!-- <button title="navigation" id="menu-button"></button> -->
@@ -33,17 +33,29 @@
 
     <section class="card">
         <h2>Color Schema:</h2>
-        <p> At this time I have the colors set to blue, white and green. I plan to implement what I call:</p>
+
+            <table class="colors">
+                <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
+                <tr><th>background-color</th><td class="background-color">[#32343e]</td></tr>
+                <tr><th>primaryc color</th><td class="primary-color">[White]</td></tr>
+                <tr><th>grey-blue</th><td class="grey-blue">[#404c54]</td></tr>
+                <tr><th>blue-enough</th><td class="blue-enough">[#446b6a]</td></tr>
+                <tr><th>almost-teal</th><td class="almost-teal">[#478d73]</td></tr>
+                <tr><th>sea-green</th><td class="sea-green">[#5ba95d]</td></tr>
+            </table>
+        <!-- <p> At this time I have the colors set to blue, white and green. I plan to implement what I call:</p>
         <ul>
             <li style="color:navy;">Navy- used as background</li>
             <li style="color:white; text-shadow: 2px 2px black;"> White used for text on darker background</li>
-            <li style="color:#32343e;">dark blue -- May use this instead of Navy blue</li>
-            <li style="color:#404c54;">grey blue -- I plan to use if color is seemingly too off for dark blue</li>
-            <li style="color:#446b6a;">blue enough -- I plan to use this as accent color to section tags  </li>
+            <li style="color:#32343e;">dark blue -May use this instead of Navy blue</li>
+            <li style="color:#404c54;">grey blue - I plan to use if color is seemingly too off for dark blue</li>
+            <li style="color:#446b6a;">blue enough - I plan to use this as accent color to section tags  </li>
             <li style="color:#478d73;">almost teal - accent color, will be used to add variety, may use in certain text like heading  </li>
             <li style="color:#5ba95d;">sea green -accent color, used in smaller amounts to add variety.</li>
-        </ul> 
+        </ul>  --> 
     </section>
+
+
 
     <section class="card">
         <h2>Site Purpose: </h2>
