added logo and updated chambers of commerce

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ for hamburger menu use " ☰ "  -->
 
     <meta charset="UTF-8">
     <meta name="viewport"    content = "width=device-width, initial-scale=1.0">
-    <meta name="description" content = "WDD 230 - Web Frontend Development - Cayleigh Leishman - Course Assingment Portal">
+    <meta name="description" content = "WDD 230 - Web Frontend Development - Cayleigh Leishman - Course Assingment Portal"> <!-- use in google serach engines the part that describes what website is -->
     <meta name="author"      content = "Cayleigh Leishman">
 
     <!-- Lesson 2 Activity- Social Media Meta Tags -->
@@ -20,7 +20,7 @@ for hamburger menu use " ☰ "  -->
     <meta property = "og:url"   content = "https://cayleighleishman.github.io/wdd230/">
     <meta property = "og:image" content = "https://cayleighleishman.github.io/wdd230/images/cayleigh.png" >
 
-    <title>Cayleigh - WDD 230 - Web Frontend Development</title>
+    <title>Cayleigh - WDD 230 - Web Frontend Development</title> <!-- this would show on google links that people tend to click on -->
    
     <!--Lesson 2 Activity *mostly done in CSS* -->
     <!-- connects to .css files in Styles folder -->  
@@ -41,7 +41,9 @@ for hamburger menu use " ☰ "  -->
 <body>
     <header>
         <div class="cayleigh">
-            <img src="images/cayleigh.png" alt="Cayleigh's headshot">
+            <a href="https://www.w3schools.com">
+                <img src="images/cayleigh.png" alt="Cayleigh's headshot" border="0" width="100" height="100">
+            </a>
             <h1>Cayleigh Leishman </h1>
             
         </div>
@@ -83,8 +85,12 @@ for hamburger menu use " ☰ "  -->
                     <li><a href="https://codepen.io/Cayleigh-Secret/pen/oNRNWRm"> lesson 3.3 CSS Pseudo-elements</a></li>
                     <li><a href="https://codepen.io/Cayleigh-Secret/pen/jOoOwma">lesson 3.4 Responsive Hamburger Menu</a></li>
 
-                    <!-- <li> <b>Lesson 04:</b> <a href="#"></a> </li>
-                    <li><b>Lesson 05 - </b><a href="#"></a> </li>
+                    <li> <b>Lesson 04:</b></li>
+                    <li><a href="https://codepen.io/Cayleigh-Secret/pen/abrvOXJ">lesson 04: Psuedo-Classes</a> </li>
+
+
+
+                    <!--<li><b>Lesson 05 - </b><a href="#"></a> </li>
                     <li><b>Lesson 06 - </b><a href="#"></a> </li>
                     <li><b>Lesson 07 - </b><a href="#"></a> </li>
                     <li><b>Lesson 08 - </b><a href="#"></a> </li>
