line 16 fixed spelling error

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -13,7 +13,7 @@
     <!-- meta property tags -->
 
     <meta property = "og:title" content = "Pocatello Idaho, USA Chamber of Commerce" >
-    <meta property = "og:tytpe" content = "Website" >
+    <meta property = "og:type" content = "Website" >
     <meta property = "og:url"   content = "#">  <!-- insert link to chamber home site -->
     <meta property = "og:image" content = "#" >
 
