--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@ for hamburger menu use " ☰ "  -->
             <section class="card">
                 <h3>Information</h3>
                 <p>Weather Information: Placeholder</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis saepe fugit veniam laborum, illo provident optio sapiente laboriosam magnam modi quos dicta illum perspiciatis nostrum dolore temporibus et accusantium rerum.</p>
                 <p> </p>
 
             </section>
