updated meta image

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -1,6 +1,7 @@
 <!-- CHAMBER ASSINGMENT -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,14 +9,12 @@
     <meta name="description" content = "WDD 230 -BYUI idaho-spring 1024 .">
     <meta name="author" content="Cayleigh Leishman">
 
-
-
     <!-- meta property tags -->
 
     <meta property = "og:title" content = "Pocatello Idaho, USA Chamber of Commerce" >
     <meta property = "og:type" content = "Website" >
     <meta property = "og:url"   content = "https://cayleighleishman.github.io/wdd230/chamber/index.html"> 
-    <meta property = "og:image" content = "images/" >
+    <meta property = "og:image" content = "images/Poky-logo.jpg" >
 
     <!-- CSS -->
     <link rel="stylesheet" href="styles/normalize.css" >  <!-- Runs first -->
@@ -24,10 +23,8 @@
     <link rel="stylesheet" href="styles/larger.css">      <!-- Runs Last -->
 
     <!-- favicon -->
-    <link rel="icon" href="/images/favicon-16x16.png">
+    <link rel="icon" href="images/favicon-16x16.png">
     
-
-
     <script src="scripts/" defer> </script>
     <script src="scripts/hamburger.js" defer> </script>
 
