updated site/added main,img,header and such

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ for hamburger menu use " ☰ "  -->
     <header>
         <div class="cayleigh">
             <a href="https://www.w3schools.com">
-                <img src="images/cayleigh.png" alt="Cayleigh's headshot" border="0" width="100" height="100">
+                <img src="images/cayleigh.png" alt="Cayleigh's headshot" width="100" height="100">
             </a>
             <h1>Cayleigh Leishman </h1>
             
