hid "flag" image until next time

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -40,7 +40,7 @@
         </div>
 
         <!-- use this for when you hover over nav. similar to pocatello website's picture -->
-        <img class="flag" src="images/poky-flag.png" alt="pocatello flag">
+        <!-- <img class="flag" src="images/poky-flag.png" alt="pocatello flag"> -->
     </header>
 
     <button title="navigation" id="menu-button"></button>
