removed alt line 30

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -27,7 +27,7 @@
     <script src="scripts/hamburger.js" defer> </script>
                                     
                                     <!-- favicon -->
-    <link rel="icon" href="images/favicon_io/favicon-32x32.png" alt="pocatello flag">
+    <link rel="icon" href="images/favicon_io/favicon-32x32.png">
     
 </head>
 
