--- a/chamber/index.html
+++ b/chamber/index.html
@@ -47,12 +47,9 @@
     <button title="navigation" id="menu-button"></button>
     <nav>
         <ul>
-            <li><a href="/index.html">Home</a> </li>
+            <li><a href="/chamber/index.html">Home</a></li>
             <li><a href="/lesson03/chamber-site-plan.html">Site-Plan </a> </li>
-            <li><a href="/chamber/index.html">Chamber</a> </li>
-            <li><a href="https://www.byui.edu/">BYU-Idaho</a></li>
-            <li><a href='https://www.churchofjesuschrist.org/study/scriptures/nt/john/8?lang=eng&id=p12#p12'>John 18:12</a></li> <!--put in your favourite scripture-->
-
+            
         </ul>
 
     </nav>
@@ -104,6 +101,10 @@
         <hr>
         <p>&copy; <span id='currentYear'></span>│Cayleigh Leishman │ Idaho, USA" │  </p> <!-- &copy is suposed to be the code that will give you the ©  symbol -->    
         <p id='lastModified'></p>
+
+        <ul>
+            <li><a href="/index.html">Cayleigh's Home Page </a></li>
+        </ul>
     </footer>
 
 </body>
