--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -27,8 +27,8 @@
     
     <!-- <button title="navigation" id="menu-button"></button> -->
     <nav>
-        <a href = '/index.html'>Home</a>
-        <a href = '/chamber/index.html'>Chamber</a> 
+        <a href = '/index.html'>Cayleigh's Home Page</a>
+        <a href = '/chamber/index.html'>Chamber Home Page</a> 
     </nav>
 
     <section class="card">
