--- a/chamber/index.html
+++ b/chamber/index.html
@@ -47,7 +47,7 @@
     <button title="navigation" id="menu-button"></button>
     <nav>
         <ul>
-            <li><a href="/chamber/index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="/lesson03/chamber-site-plan.html">Site-Plan </a> </li>
             
         </ul>
