--- a/lesson05/BOM.html
+++ b/lesson05/BOM.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book Of Mormon top 10</title>
+    <title>Book Of Mormon Top 10</title>
 
     <link rel= "stylesheet" href="styles/bom.css">
 
@@ -11,6 +11,15 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="/index.html">Home</a> </li>
+            
+            </ul>
+
+        </nav>
+    </header>
 
     <h1>📖 Book of Mormon - Top 10</h1>
     <main>
