updated bom.html and added meta tags

--- a/lesson05/BOM.html
+++ b/lesson05/BOM.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Of Mormon Top 10</title>
 
+    <meta property = "og:title" content = "Book of Mormon Top 10" >
+    <meta property = "og:tytpe" content = "Website" >
+    <meta property = "og:url"   content = "https://cayleighleishman.github.io/wdd230/lesson05/bom.html">
+    <meta property = "og:image" content = "null" >
+
+
     <link rel= "stylesheet" href="styles/bom.css">
 
     <script src="scripts/bom.js" defer></script>
