--- a/chamber/index.html
+++ b/chamber/index.html
@@ -37,7 +37,7 @@
             <img src="images/Poky-logo.jpg" alt="logo image">
             <!-- <img src="images/pocatello.jpg"> -->
             <!-- <img src="https://pocatello.gov/ImageRepository/Document?documentID=7660" alt="Pocatello"> -->
-            <h1>Pocatello, Idaho </h1>
+            <h1>Pocatello Idaho Chamber of Commerce</h1>
         </div>
 
         <!-- use this for when you hover over nav. similar to pocatello website's picture -->
