--- a/chamber/index.html
+++ b/chamber/index.html
@@ -14,7 +14,7 @@
     <meta property = "og:title" content = "Pocatello Idaho USA Chamber of Commerce" >
     <meta property = "og:type"  content = "Website" >
     <meta property = "og:url"   content = "https://cayleighleishman.github.io/wdd230/chamber/index.html"> 
-    <meta property = "og:image" content = "images/Poky-logo.jpg" >
+    <meta property = "og:image" content = "images/poky-logo.jpg" >
 
                                     <!-- CSS -->
     <link rel="stylesheet" href="styles/normalize.css" >  <!-- Runs first -->
@@ -111,7 +111,7 @@
       
         
     <footer>
-        <img src="images/Poky-logo.jpg" alt="logo image">
+        <img src="images/poky-logo.jpg" alt="logo image">
         <p>Pocatello Idaho Chamber of Commerce</p>
         <p>123 main street</p>
         <p>info@dontactuallyemail.com</p>
