finally spaned pocatello_img across page

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -40,6 +40,7 @@
             <h1>Pocatello Idaho Chamber of Commerce</h1>
         </div>
 
+
         <!-- use this for when you hover over nav. similar to pocatello website's picture -->
         <!-- <img class="flag" src="images/poky-flag.png" alt="pocatello flag"> -->
     </header>
@@ -54,12 +55,13 @@
         </ul>
 
     </nav>
-  
+
+        <!-- TO DO/to do: span grid image grid-columns: 1/4; -->
+    <img src="images/smaller-pocatello.webp" alt="Pocatello Idaho" class="pocatello_img">
+
+ 
     <main>
-    <div class="header_img">
-          <!-- TO DO/to do: span grid image grid-columns: 1/4; -->
-          <img src="images/smaller-pocatello.webp" alt="Pocatello Idaho">
-    </div>
+    
 
         <!--TO DO/todo:
             add
