--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ for hamburger menu use " ☰ "  -->
     <meta property = "og:title" content = "Cayleigh Leishman" >
     <meta property = "og:tytpe" content = "Website" >
     <meta property = "og:url"   content = "https://cayleighleishman.github.io/wdd230/">
-    <meta property = "og:image" content = "https://cayleighleishman.github.io/wdd230/images/cayleigh.png" >
+    <meta property = "og:image" content = "https://cayleighleishman.github.io/wdd230/images/cayleigh-small.webp" >
 
     <title>Cayleigh - WDD 230 - Web Frontend Development</title> <!-- this would show on google links that people tend to click on -->
    
@@ -42,7 +42,7 @@ for hamburger menu use " ☰ "  -->
     <header>
         <div class="cayleigh">
             <a href="https://www.w3schools.com">
-                <img src="images/cayleigh.png" alt="Cayleigh's headshot" width="100" height="100">
+                <img src="images/cayleigh-small.webp" alt="Cayleigh's headshot" width="100" height="100">
             </a>
             <h1>Cayleigh Leishman </h1>
             
