updated img link in header

--- a/lesson06/lesson06.html
+++ b/lesson06/lesson06.html
@@ -34,12 +34,13 @@
 <body>
     <header>
         <div class="cayleigh">
-            <a href="https://www.w3schools.com">
-                <img src="/images/cayleigh.png" alt="Cayleigh's headshot" width="100" height="100">
+            <a href="/index.html">
+                <img src="/images/cayleigh-small.webp" alt="Cayleigh's headshot" width="100" height="100">
             </a>
             <h1>Cayleigh Leishman </h1>
             
         </div>
+    </header>
     </header>
 
     <button title="navigation" id="menu-button"></button>
