--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ for hamburger menu use " ☰ "  -->
 <body>
     <header>
         <div class="cayleigh">
-            <a href="https://www.w3schools.com">
+            <a href="index.html">
                 <img src="images/cayleigh-small.webp" alt="Cayleigh's headshot" width="100" height="100">
             </a>
             <h1>Cayleigh Leishman </h1>
@@ -62,7 +62,16 @@ for hamburger menu use " ☰ "  -->
         </ul>
     </nav>
 
+   
+
     <main>
+        <div class="temple">
+            <picture>                
+                <source media="(max-width: 800px)" srcset="./images/pocatello-idaho-temple.webp" />
+                <img src="images/pocatello-idaho-temple.webp" alt="Pocatello temple">
+            </picture>  
+        </div>
+
         <h2>WDD 230: Web Frontend Development</h2>
         <hr>
 
