--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -12,8 +12,10 @@
 <body> 
     <header>
         <div class="cayleigh">
-            <img src="images/cayleigh.png" alt="Cayleigh's headshot">
-            <h1>Cayleigh Leishman</h1>
+            <a href="index.html">
+                <img src="images/cayleigh-small.webp" alt="Cayleigh's headshot" width="100" height="100">
+            </a>
+            <h1>Cayleigh Leishman </h1>
         </div>
     </header>
 
