--- a/lesson07/lazyload.html
+++ b/lesson07/lazyload.html
@@ -6,6 +6,16 @@
     <title>Lazy Loading example</title>
 </head>
 <body>
+    <header>
+        <div class="cayleigh">
+            <a href="/index.html">
+                <img src="/images/cayleigh-small.webp" alt="Cayleigh's headshot" width="100" height="100">
+            </a>
+            <h1>Cayleigh Leishman </h1>
+            
+        </div>
+    </header>
+
     <h1>Lazy Loading example</h1>
     <img src="http://picsum.photos/400/802" alt="placeholder image" loading="lazy" height="800" width="400">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, a. Quisquam eaque iure praesentium quidem saepe, mollitia qui blanditiis sit ipsa ratione cumque sunt nostrum vel aperiam fugiat deserunt obcaecati.
