--- a/index.html
+++ b/index.html
@@ -70,7 +70,13 @@ for hamburger menu use " ☰ "  -->
                 <source media="(max-width: 800px)" srcset="./images/pocatello-idaho-temple.webp" />
                 <img src="images/pocatello-idaho-temple.webp" alt="Pocatello temple">
             </picture>  
+
+            <div class="temple_label">
+                <p>Pocatello, Idaho Temple</p>
+            </div>
+            
         </div>
+
 
         <h2>WDD 230: Web Frontend Development</h2>
         <hr>
