fixed google-maps iframe

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ for hamburger menu use " ☰ "  -->
     <main>
         <div class="temple">
             <picture>                
-                <source media="(max-width: 800px)" srcset="./images/pocatello-idaho-temple.webp" />
+                <source media="(max-width: 800px)" srcset="images/pocatello-idaho-temple.webp" />
                 <img src="images/pocatello-idaho-temple.webp" alt="Pocatello temple">
             </picture>  
 
@@ -132,7 +132,7 @@ for hamburger menu use " ☰ "  -->
 
         <iframe class="google-maps" 
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d187148.47001161976!2d-112.66082094260919!3d42.868731459204504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53554f20d5d09b0d%3A0x70c6a2484ce39b0!2sPocatello%2C%20ID!5e0!3m2!1sen!2sus!4v1715315861795!5m2!1sen!2sus"
-        width= 100%  
+        width= "200"
         height="500"  
         style="border:0;" 
         allowfullscreen="" 
