fixed source img

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ for hamburger menu use " ☰ "  -->
     <main>
         <div class="temple">
             <picture>                
-                <source media="(max-width: 800px)" srcset="images/pocatello-idaho-temple.webp" />
+                <source media="(max-width: 800px)" srcset="images/pocatello-idaho-temple.webp">
                 <img src="images/pocatello-idaho-temple.webp" alt="Pocatello temple">
             </picture>  
 
