--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@ for hamburger menu use " ☰ "  -->
 
                     <li><b>Lesson 06 -</b></li>
                     <li><a href="lesson06/lesson06.html"> WebP Image File Format</a> </li>
+                    <li><b>Lesson 09 -</b></li>
+                    <li><a href="lesson09/prophets.html"> Prophets</a> </li>
 
                     <!--
 
