updated Prophets assingment

--- a/lesson09/prophets.html
+++ b/lesson09/prophets.html
@@ -11,7 +11,7 @@
 
     <header>
 
-        <h1>Latter-day Prophets</h1>
+        <h1 class="title">Latter-day Prophets</h1>
 
     </header>
 
@@ -21,8 +21,8 @@
     </main>
 
     <footer>
-       Cayleigh Leishman | Latter-day Prophets
 
+       Cayleigh Leishman | Latter-day Prophets
        <ul>
         <li><a href="/index.html">Cayleigh's Home Page </a></li>
        </ul>
