updated weather api among other sites

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -39,17 +39,15 @@
             <h1>Pocatello Idaho Chamber of Commerce</h1>
         </div>
 
-        <!-- use this for when you hover over nav. similar to pocatello website's picture -->
-        <!-- <img class="flag" src="images/poky-flag.png" alt="pocatello flag"> -->
     </header>
 
     <button title="navigation" id="menu-button"></button>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">Discover</a></li>
-            <li><a href="#"> Directory</a></li>
-            <li><a href="#">Join</a></li>
+            <li><a href="discover.html">Discover</a></li>
+            <li><a href="directory.html"> Directory</a></li>
+            <li><a href="join.html">Join</a></li>
         </ul>
 
     </nav>
@@ -62,9 +60,8 @@
 
         <div class="discover-images">
             <figure>
-                <!-- TO do: FIND PROPER IMAGES FOR HERE -->
-                <img src="images/poky-flag.png" alt ="pocatello flag">
-                <figcaption>A PLaceholder image</figcaption>
+                <img src="images/poky-flag.webp" alt ="pocatello flag">
+                <figcaption>Pocatello Flag</figcaption>
             </figure>
         </div>
 
