--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -46,9 +46,9 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="inprogress.html">Discover</a></li>
-            <li><a href="inprogress.html"> Directory</a></li>
-            <li><a href="inprogress.html">Join</a></li>
+            <li><a href="discover.html">Discover</a></li>
+            <li><a href="discover.html"> Directory</a></li>
+            <li><a href="join.html">Join</a></li>
         </ul>
 
     </nav>
