--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -1,4 +1,3 @@
-<!-- CHAMBER ASSINGMENT -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -11,9 +10,9 @@
     <meta name="author" content="Cayleigh Leishman">
 
                             <!-- meta property tags -->
-    <meta property = "og:title" content = "Pocatello Idaho USA Chamber of Commerce" >
+    <meta property = "og:title" content = "Pocatello Idaho USA Chamber of Commerce - discover page" >
     <meta property = "og:type"  content = "Website" >
-    <meta property = "og:url"   content = "https://cayleighleishman.github.io/wdd230/chamber/index.html"> 
+    <meta property = "og:url"   content = "https://cayleighleishman.github.io/wdd230/chamber/discover.html"> 
     <meta property = "og:image" content = "images/poky-logo.jpg" >
 
                                     <!-- CSS -->
@@ -23,8 +22,8 @@
     <link rel="stylesheet" href="styles/larger.css">      <!-- Runs Last -->
 
                                  <!-- Java Script -->
-    <script src="scripts/hamburger.js" defer> </script>
-    <script src="scripts/windchill.js" defer></script>
+    <script src="scripts/hamburger.js" defer></script>
+    <script src="scripts/discover.js" defer></script>
                                     
                                     <!-- favicon -->
     <link rel="icon" href="images/favicon_io/favicon-16x16.png">
@@ -40,23 +39,23 @@
             <h1>Pocatello Idaho Chamber of Commerce</h1>
         </div>
 
-        <!-- use this for when you hover over nav. similar to pocatello website's picture -->
-        <!-- <img class="flag" src="images/poky-flag.png" alt="pocatello flag"> -->
     </header>
 
     <button title="navigation" id="menu-button"></button>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">Discover</a></li>
-            <li><a href="#"> Directory</a></li>
-            <li><a href="#">Join</a></li>
+            <li><a href="discover.html">Discover</a></li>
+            <li><a href="directory.html"> Directory</a></li>
+            <li><a href="join.html">Join</a></li>
         </ul>
 
     </nav>
   
-    <main>
-    <b style font-size:50em> Page in Progress </b >
+    <main class="discover">
+
+    <h5>Thank you!</h5>
+
     </main>
 
       
