--- a/chamber/weather.html
+++ b/chamber/weather.html
@@ -4,19 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather </title>
+
+    <!-- CSS -->
+     <link rel="stylesheet" href="base.html">
+
+    <!-- JAVASCRIPT -->
     <script src="./scripts/weather.js" defer></script>
 
 </head>
 
 <body>
-
     <h1>OpenWeatherMap.org API Test</h1>
+
     <main>
       <p>The current temperature in Pocatello, Idaho is <span id="current-temp"></span></p>
       <figure>
         <img id="weather-icon" src="" alt="">
         <figcaption></figcaption>
       </figure>
+      
     </main>
 
   </body>
