--- a/chamber/weather.html
+++ b/chamber/weather.html
@@ -16,13 +16,13 @@
 <body>
     <h1>OpenWeatherMap.org API Test</h1>
 
-    <main>
+    <main class="weather_main">
       <p>The current temperature in Pocatello, Idaho is <span id="current-temp"></span></p>
       <figure>
         <img id="weather-icon" src="" alt="">
         <figcaption></figcaption>
       </figure>
-      
+
     </main>
 
   </body>
